--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "express": "^4.17.3",
     "express-react-views": "^0.11.0",
     "mongoose": "^6.3.1",
+    "nodemon": "^2.0.16",
     "react": "^16.14.0",
     "react-dom": "^16.14.0"
   },
