--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0"
   },
+  "engines": {
+    "node": "16.13.2"},
   "scripts": {
     "start": "node server.js"
   },
